# club

./: .gitignore  Cargo.toml  Dockerfile  Taskfile.yml  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml  release.yml
migrations/: 20240127180108_init.sql
src/: app.rs  database.rs  discord.rs  games.rs  main.rs  templates.rs
styles/: site.css
templates/: base.html  index.html  login.html  profile.html  user_base.html
