[package]
name = "club"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "club"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.12", features = ["derive", "env"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = {  version = "0.3.18", features = ["env-filter", "json"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111", features = ["raw_value"] }
chrono = { version = "0.4.31", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "macros", "json", "ipnetwork", "chrono", "uuid", "migrate", "postgres"] }
axum = "0.7.4"
askama = { version = "0.12.1", features = ["serde", "with-axum", "serde_json", "mime", "mime_guess"] }
tower-http = { version = "0.5.1", features = ["trace"] }
oauth2 = "4.4.2"
reqwest = { version = "0.11.23", features = ["json"] }
dotenv = "0.15.0"
tower-sessions-sqlx-store = { version = "0.10.0", features = ["postgres"] }
axum-extra = { version = "0.9.2", features = ["cookie", "cookie-key-expansion", "cookie-private", "cookie-signed", "form", "typed-header"] }
async-session = "3.0.0"
askama_axum = "0.4.0"